--- a/src/app/details/details.component.html
+++ b/src/app/details/details.component.html
@@ -8,8 +8,8 @@
     <h2 class="section-heading">About this housing location</h2>
     <ul>
       <li>Units available: {{ housingLocation?.availableUnits}}</li>
-      <li>Does this location have wifi: {{ housingLocation?.wifi}}</li>
-      <li>Does this location have laundry: {{ housingLocation?.laundry }}</li>
+      <li>Does this location have wifi: {{ housingLocation?.wifi ? 'Yes' : 'No'}}</li>
+      <li>Does this location have laundry: {{ housingLocation?.laundry ? 'Yes' : 'No'}}</li>
     </ul>
     <section class="listing-apply">
       <h2 class="section-heading">Apply now to live here</h2>
